NXT-485: Adding 'AutoConnectCommand' workflow command implementation
* Updated generated entities
* Introduced 'NodesAutoConnector' helper class
* Added new 'Auto Connect Nodes' workflow
* Added new 'ConnectCommandsTestHelper' helper class

NXT-485 (Gateway API: Add connection between nodes via shortcut)